# liballocator

./: .clang-format  .clang-tidy  .clang_format  .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  conanfile.txt
.config/: cppcheck.warn  doxygen.warn
.github/workflows/: test-linux.yml
.gitlab/ci/: build-baremetal.yml  build-demo-baremetal.yml  build-linux.yml  build-tests-linux.yml  coverage-linux.yml  demo-baremetal.yml  deploy.yml  quality.yml  run-demo-baremetal.yml  run-tests-linux.yml  run-valgrind-linux.yml  test-linux.yml  valgrind-linux.yml
cmake/: macros.cmake  platform.cmake
docs/: CMakeLists.txt  allocator_8cpp.html  allocator_8cpp__incl.map  allocator_8cpp__incl.md5  allocator_8h.html  allocator_8h__dep__incl.map  allocator_8h__dep__incl.md5  allocator_8h__incl.map  allocator_8h__incl.md5  allocator_8h_source.html  allocator_8hpp.html  allocator_8hpp__dep__incl.map  allocator_8hpp__dep__incl.md5  allocator_8hpp__incl.map  allocator_8hpp__incl.md5  allocator_8hpp_source.html  annotated.html  chunk_8cpp.html  chunk_8cpp__incl.map  chunk_8cpp__incl.md5  chunk_8h.html  chunk_8h__dep__incl.map  chunk_8h__dep__incl.md5  chunk_8h_source.html  class_memory_1_1_chunk-members.html  class_memory_1_1_chunk.html  class_memory_1_1_chunk__coll__graph.map  class_memory_1_1_chunk__coll__graph.md5  class_memory_1_1_chunk__inherit__graph.map  class_memory_1_1_chunk__inherit__graph.md5  class_memory_1_1_list_node-members.html  class_memory_1_1_list_node.html  class_memory_1_1_list_node__coll__graph.map  class_memory_1_1_list_node__coll__graph.md5  class_memory_1_1_page-members.html  class_memory_1_1_page.html  class_memory_1_1_page__coll__graph.map  class_memory_1_1_page__coll__graph.md5  class_memory_1_1_page__inherit__graph.map  class_memory_1_1_page__inherit__graph.md5  (+248 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+24 more)
include/: CMakeLists.txt
include/allocator/: allocator.h  allocator.hpp  region.h  region.hpp
include/zone_allocator/: allocator.h  region.h
lib/: CMakeLists.txt  ListNode.hpp  Page.cpp  Page.hpp  PageAllocator.cpp  PageAllocator.hpp  RegionInfo.cpp  RegionInfo.hpp  Zone.cpp  Zone.hpp  ZoneAllocator.cpp  ZoneAllocator.hpp  allocator.cpp  group.cpp  group.hpp  list_node.hpp  page.cpp  page.hpp  page_allocator.cpp  page_allocator.hpp  region_info.cpp  utils.hpp  version.hpp.in  zone.cpp  zone.hpp  zone_allocator.cpp  zone_allocator.hpp
lib/catch2/: CMakeLists.txt
lib/catch2/include/catch2/: VerboseReporter.hpp
lib/include/allocator/: Region.hpp  allocator.hpp  region.hpp
src/: CMakeLists.txt  allocator.cpp  chunk.cpp  chunk.h  group.cpp  group.hpp  list_node.h  list_node.hpp  page.cpp  page.h  page.hpp  page_allocator.cpp  page_allocator.h  page_allocator.hpp  region_info.cpp  region_info.h  region_info.hpp  utils.h  utils.hpp  version.h.in  version.hpp.in  zone.cpp  zone.h  zone.hpp  zone_allocator.cpp  zone_allocator.h  zone_allocator.hpp
test/: CMakeLists.txt  main.cpp  test_allocator.cpp  test_list_node.cpp  test_page.cpp  test_page_allocator.cpp  test_region_info.cpp  test_utils.cpp  test_utils.h  test_utils.hpp  test_zone.cpp  test_zone_allocator.cpp  utils.cpp  utils.h
test/init/: CMakeLists.txt
test/integration/: ZoneAllocator.cpp  integration_page_allocator.cpp  integration_zone_allocator.cpp
test/liballocator-demo/: CMakeLists.txt  appMain.cpp  appMain2.cpp  liballocator-demo.cmake
test/liballocator-demo_old/: CMakeLists.txt
test/liballocator-tests/: CMakeLists.txt  TestUtils.hpp  appMain.cpp  liballocator-tests.cmake  settings.cmake
test/liballocator-tests/integration/: PageAllocator.cpp  ZoneAllocator.cpp
test/liballocator-tests/perf/: allocator.cpp
test/liballocator-tests/unit/: ListNode.cpp  Page.cpp  PageAllocator.cpp  RegionInfo.cpp  Zone.cpp  ZoneAllocator.cpp  allocator.cpp  group.cpp  utils.cpp
test/perf/: perf_allocator.cpp
test/unit/: PageAllocator.cpp  RegionInfo.cpp  Zone.cpp  allocator.cpp  unit_allocator.cpp  unit_group.cpp  unit_list_node.cpp  unit_page.cpp  unit_page_allocator.cpp  unit_region_info.cpp  unit_utils.cpp  unit_zone.cpp  unit_zone_allocator.cpp  utils.cpp
tools/: check-clang-tidy.sh  check_format.sh  ci_export-paths.sh  ci_format.sh  ci_install-clang.sh  ci_install-cmake.sh  ci_install-gcc-embedded.sh  ci_install-gcc.sh
tools/ci/: check-format.sh
tools_old/ci/: check-format.sh  export-paths.sh  install-clang.sh
tools_old/cmake/: macros.cmake
